# baobei-needs

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: scene.scn
src/: collisions.rs  constants.rs  controllers.rs  cooldown.rs  drawing.rs  events.rs  game_play.rs  gameplay.rs  inputs.rs  main.rs  menu.rs  movement.rs  physics.rs  publisher.rs  rendering.rs  scenes.rs  state.rs
src/collisions/: debug_collisions.rs  mod.rs
src/gameplay/: entities.rs  happiness.rs  items.rs  materials.rs  mod.rs  movement.rs
