[package]
name = "baobei-needs"
version = "0.0.1"
authors = ["Adrien Turiot <adrien.turiot@gmail.com>"]
edition = "2018"
description = "A little game powered with Rust ggez"
repository = "https://github.com/DidiBear/baobei-needs"
readme = "README.md"
license = "MIT"
categories = ["games"]
keywords = ["game"]

[dependencies]
ggez = "0.5"
legion = "0.2.4"

[dev-dependencies]
rusty-hook = "^0.11.2"
