[package]
name = "baobei-needs"
version = "0.0.1"
authors = ["Adrien Turiot <adrien.turiot@gmail.com>"]
edition = "2018"
description = "A little game powered with Bevy"
repository = "https://github.com/DidiBear/baobei-needs"
readme = "README.md"
license = "MIT"
categories = ["games"]
keywords = ["game"]

[dependencies]
bevy = "0.3"
bevy_rapier2d = "0.5"

[dev-dependencies]
rusty-hook = "^0.11"
